k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lefebl4
  annotations:
    istio-injection: enabled
