k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-grpc-server
  namespace: lefebl4
spec:
  selector:
    matchLabels:
      app: ping-grpc-server
  template:
    metadata:
      labels:
        app: ping-grpc-server
    spec:
      containers:
      - name: ping-grpc-server
        image: docker.io/library/ping-grpc-server:v0.0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
