k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-grpc-service
  namespace: lefebl4
spec:
  type: ClusterIP
  selector:
    app: ping-grpc-server
  ports:
  - port: 443
    targetPort: 50051
    protocol: TCP
    name: grpc-ping
