k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ping-grpc-gwy
spec:
  selector:
    app: ping-grpc-server
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - ping.example.com
