k8s/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: ping-grpc-service-entry
  namespace: lefebl4
spec:
  hosts:
  - ping.dev2.mlife
  location: MESH_EXTERNAL
  ports:
  - name: grpc
    number: 443
    protocol: grpc
  resolution: NONE
