k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ping-grpc-service
  namespace: lefebl4
spec:
  hosts:
  - ping.dev2.mlife
  gateways:
  - ping-grpc-gwy
  http:
  - route:
    - destination:
        host: ping-grpc-service.lefebl4.svc.cluster.local
        port:
          number: 443
